--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ pytest-flask==1.3.0
 pytest-playwright==0.4.4
 playwright==1.44.0
 factory-boy==3.3.0  # For test data factories
+# linting and formatting tools
+ruff==0.3.3
+black==24.3.0
+pyright==1.1.351
