--- a/requirements.txt
+++ b/requirements.txt
@@ -3,10 +3,12 @@ flask-sqlalchemy==3.1.1
 flask-migrate==4.1.0
 # testing parts could be removed when packaging
 pytest==8.3.5
+pytest-xdist==3.6.1
 pytest-flask==1.3.0
 pytest-playwright==0.4.4
 playwright==1.44.0
 factory-boy==3.3.0  # For test data factories
+pillow==10.3.0  # For visual regression testing
 # linting and formatting tools
 ruff==0.3.3
 black==24.3.0
