--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ flask-migrate==4.1.0
 pytest==8.3.5
 pytest-xdist==3.6.1
 pytest-flask==1.3.0
+pytest-timeout==2.4.0
 pytest-playwright==0.4.4
 playwright==1.44.0
 factory-boy==3.3.0  # For test data factories
